--- a/package.json
+++ b/package.json
@@ -6,9 +6,22 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.35.3",
+    "axios": "^0.27.2",
+    "chart.js": "^3.8.0",
+    "date-fns": "^2.29.1",
+    "dompurify": "^2.3.10",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
+    "react-loader-spinner": "^5.1.7-beta.1",
+    "react-paginate": "^8.1.3",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-sparklines": "^1.7.0",
+    "recharts": "^2.1.12",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +47,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.6"
   }
 }
