--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
 REACT_APP_KRYPTOFOLIO_URL = "https://api.coingecko.com/api"
+REACT_APP_FIREBASE_API_KEY = AIzaSyAftqKFzVCtagOCYEi1gACY-DgRgGyd0Hc
+REACT_APP_FIREBASE_AUTH_DOMAIN= kryptofolio-b252a.firebaseapp.com
+REACT_APP_FIREBASE_PROJECT_ID= kryptofolio-b252a
+REACT_APP_FIREBASE_STORAGE_BUCKET= kryptofolio-b252a.appspot.com
+REACT_APP_FIREBASE_MESSAGING_ID= 11092858518
+REACT_APP_FIREBASE_APP_ID= 1:11092858518:web:abccb03083b34deecc14b7
+
