--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "chart.js": "^3.8.0",
     "date-fns": "^2.29.1",
     "dompurify": "^2.3.10",
+    "firebase": "^9.15.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-chartjs-2": "^4.3.1",
