--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-sparklines": "^1.7.0",
+    "react-toastify": "^9.1.1",
     "recharts": "^2.1.12",
     "web-vitals": "^2.1.4"
   },
