--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_KRYPTOFOLIO_URL = "https://api.coingecko.com/api"
+REACT_APP_KRYPTOFOLIO_URL = https://api.coingecko.com/api
 REACT_APP_FIREBASE_API_KEY = AIzaSyAftqKFzVCtagOCYEi1gACY-DgRgGyd0Hc
 REACT_APP_FIREBASE_AUTH_DOMAIN= kryptofolio-b252a.firebaseapp.com
 REACT_APP_FIREBASE_PROJECT_ID= kryptofolio-b252a
